# biba

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements-dev.txt
.github/workflows/: G-Build-All.yml  G-Build-Controller-Image.yml  G-Build-ROS2-Bases.yml  G-Build-ROS2-Stack.yml  G-Build-STM32F103.yml  README.md  build.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
artifacts/blackbox/: session_0001.bbd  session_0001.csv  session_0002.bbd  session_0002.csv  session_0003.bbd  session_0003.csv  session_0004.bbd  session_0004.csv  session_0005.bbd  session_0005.csv  session_0006.bbd  session_0006.csv  session_0007.bbd  session_0007.csv  session_0008.bbd  session_0008.csv  session_0009.bbd  session_0009.csv  session_0010.bbd  session_0010.csv  session_0011.bbd  session_0011.csv  session_0012.bbd  session_0012.csv
artifacts/current-trace/: README.md
artifacts/telemetry-captures/: README.md
biba-controller/: Dockerfile  config.py  main.py  motor_test_api.py  pid_tuning.py  requirements.txt  settings_store.py  system_stats.py
biba-controller/bms/: __init__.py  daly.py  poller.py
biba-controller/buzzer/: __init__.py  beacon.py  blheli_parser.py  buzzer.py  melodies.py  motor_synth.py  voice_selector.py  wav_player.py
biba-controller/crsf/: __init__.py  protocol.py  receiver.py  telemetry.py
biba-controller/imu/: __init__.py  bmi160.py  factory.py  lsm6ds3.py
biba-controller/motors/: __init__.py  assisted_drive.py  current_control.py  current_sense.py  driver.py  ramping.py
biba-controller/stm32_link/: __init__.py  client.py  protocol.py
biba-controller/voice/: build_spectral_cache.py
biba-controller/voice-cache/: arm_begin.left.peaks.json  arm_begin.right.peaks.json  connected_online.left.peaks.json  connected_online.right.peaks.json  disarm_waiting.left.peaks.json  disarm_waiting.right.peaks.json  disconnected_protocol.left.peaks.json  disconnected_protocol.right.peaks.json  failsafe_intruder.left.peaks.json  failsafe_intruder.right.peaks.json  low_voltage_retribution.left.peaks.json  low_voltage_retribution.right.peaks.json  sos_comply.left.peaks.json  sos_comply.right.peaks.json  startup_returned.left.peaks.json  startup_returned.right.peaks.json
biba-controller/web/: settings.css  settings.html  settings.js
docker/: README.md
docker/base/: Dockerfile.ros2-control  Dockerfile.ros2-zenoh  README.md
docker/legacy-pi/: README.md
docker/ros2/: .env.example  Dockerfile  README.md  docker-compose.yml
docs/: deployment.md  field-validation.md  ros2_stack.md  stm32_architecture.md  system_architecture.md  telemetry-investigation-2026-03-28.md  variants.md  wiring.md
docs/plans/: 2026-03-25-bts7960-design.md  2026-03-25-bts7960-implementation.md  2026-03-26-bms-ble-design.md  2026-03-26-bms-ble-plan.md  2026-03-26-motor-synth-melodies-design.md  2026-03-26-motor-synth-melodies-plan.md  2026-03-27-fft-speech-tuning-design.md  2026-03-27-fft-speech-tuning-plan.md  2026-03-27-lua-telemetry-redesign-design.md  2026-03-27-lua-telemetry-redesign-plan.md  (+59 more)
firmware/: README.md  platformio.ini
ros2_ws/: .gitignore  README.md
ros2_ws/src/biba_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/biba_bringup/config/: .gitkeep  diff_drive_controller.yaml  twist_mux.yaml
ros2_ws/src/biba_bringup/launch/: .gitkeep  control.launch.py  twist_mux.launch.py
ros2_ws/src/biba_description/: CMakeLists.txt  package.xml
ros2_ws/src/biba_description/launch/: .gitkeep  robot_state_publisher.launch.py
ros2_ws/src/biba_description/meshes/: .gitkeep
ros2_ws/src/biba_description/urdf/: .gitkeep  biba.urdf.xacro
ros2_ws/src/biba_hardware_stm32/: CMakeLists.txt  biba_hardware_stm32_plugin.xml  package.xml
ros2_ws/src/biba_hardware_stm32/include/biba_hardware_stm32/: .gitkeep  biba_stm32_system.hpp  spi_transport.hpp  stm32_link.hpp
ros2_ws/src/biba_hardware_stm32/proto/: README.txt  biba_proto.c  biba_version.h
ros2_ws/src/biba_hardware_stm32/src/: .gitkeep  biba_stm32_system.cpp  spi_transport.cpp  stm32_link.cpp
ros2_ws/src/biba_hardware_stm32/test/: test_stm32_link.cpp
ros2_ws/src/biba_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/biba_msgs/msg/: CrsfStatus.msg  MotorAudio.msg  Stm32Telemetry.msg
scripts/: biba_aliases.sh  biba_blackbox_download.py  biba_monitor.py  diagnostics.sh  is_algo_bench.py  is_algo_dir_analysis.py  is_algo_dir_plot.py  is_algo_sin_report.py  is_algo_sin_sonogram.py  is_algo_time_view.py  is_batsag_research.py  is_biba_drive_capture.py  is_dr_sim.py  is_hint_research.py  is_load_detector_research.py  is_load_disambiguate.py  is_poc_analyse.py  is_poc_both_hold.py  is_poc_capture.py  is_poc_pid.py  is_poc_plot_time.py  is_poc_raw_analyze.py  is_poc_rpmtrack.py  is_poc_step.py  is_poc_sweep.py  is_poc_sweepraw.py  is_rpm_calibrate.py  is_step_response_analysis.py  is_sweepraw_analyze.py  is_trap_step_extractor.py  update.sh  vcp_capture.py  voice_prep.py
tests/: conftest.py  test_ads1115.py  test_aht30.py  test_assisted_drive.py  test_biba_aliases.py  test_biba_bringup_control.py  test_biba_bringup_twist_mux.py  test_biba_description_ros2_control.py  test_biba_description_urdf.py  test_biba_proto_drift.py  test_blheli_parser.py  test_bmi160.py  test_bms_poller.py  test_buzzer.py  test_config.py  test_crsf.py  test_current_control.py  test_current_sense.py  test_daly.py  test_daly_ble.py  test_imu_factory.py  test_is_poc_algorithms.py  test_lsm6ds3.py  test_lua_telemetry_screen.py  test_main.py  test_main_voice_audition.py  test_main_voice_groups.py  test_motor_synth.py  test_motor_test_api.py  test_motors.py  test_pid_tuning.py  test_ramping.py  test_ros2_ws_skeleton.py  test_settings_store.py  test_setup_node.py  test_setup_node_ros2.py  test_stm32_bridge_translator.py  test_stm32_link_client.py  test_stm32_link_protocol.py  test_system_stats.py  (+9 more)
voice-src/: phrases.yml
(+419 files in other folders)
