<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>biba_bringup</name>
  <version>0.0.0</version>
  <description>Launch-файлы и конфиги для композиции C: controller_manager, twist_mux, robot_state_publisher.</description>
  <maintainer email="dev@biba.local">BiBa maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>biba_description</exec_depend>
  <exec_depend>biba_msgs</exec_depend>
  <exec_depend>biba_stm32_bridge</exec_depend>
  <exec_depend>biba_hardware_stm32</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
